# allsky-light-pollution

./: .gitignore  LICENSE.md  README.md  pyproject.toml
docs/: writeup.md
images/: instructions.md
notebooks/: README.md  solar-lunar-ephem.ipynb
notebooks/conclusions/: acquistion-method-unsuitable.ipynb
notebooks/experimental/: 3d-pca-visualization.ipynb  apply-pca-to-images.ipynb  solar-lunar-ephem.ipynb
notebooks/exploratory/: antialiasing-effects.ipynb  brute-force-parse.ipynb  explore-fits-exposures.ipynb  exposure-time-only-analysis.ipynb  full-range-enriched.ipynb  full-range-exposure-only.ipynb  image-exclusion-criteria.ipynb  solve-antialiased-parse.ipynb  streetlight-modernization-optimized.ipynb  study-fit-vs-jpg-calibration.ipynb
notebooks/exploratory-all-parsed/: exposure-time-only-analysis.ipynb
notebooks/exploratory-nights-filtered/: full-range-enriched.ipynb  full-range-exposure-only.ipynb  streetlight-modernization-optimized.ipynb
notebooks/processing/: alias-parse-regression-testing.ipynb  antialias-parse.ipynb  brute-force-parse.ipynb  generate-enriched-df.ipynb  generate-ideal-df.ipynb  image-masking.ipynb  validate-missing-source-data.ipynb
src/: csv-study.ipynb  ocr-process.py
src/allsky/: __init__.py  analysis.py  astronomy.py  classifiers.py  classifiers_antialiased.py  ocr.py  plotting.py  processing.py  validation.py
tests/allsky/: test_packaging.py
